24-09-22/K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-weather
spec:
  selector:
    matchLabels:
      app: open-weather
  template:
    metadata:
      labels:
        app: open-weather
    spec:
      containers:
      - name: open-weather
        image: openweather:v0.1.0.beta
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
