24-09-22/K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-weather-service
spec:
  selector:
    app: open-weather
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
